@@ -194,6 +194,8 @@ void   *mem_alloc(size_t size);
 char   *mem_strdup(const char *s);
 #define SZ sizeof
 
+void    using_file(const char *filename);
+
 void    error_and_abort(Eet_File *ef, const char *fmt, ...);
 
 /* global vars */
@@ -205,6 +207,7 @@ extern char                  *file_in;
 extern char                  *tmp_dir;
 extern char                  *file_out;
 extern char                  *progname;
+extern char                  *watchfile;
 extern int                    verbose;
 extern int                    no_lossy;
 extern int                    no_comp;
